# fastApi101

./: README.md
books/: README.md  pyproject.toml
books/books/: app.py
